Cap2025/src/edu/najah/cap/advance/examples/exc3/correct/SalahFilter.java
package edu.najah.cap.advance.examples.exc3.correct;

public class SalahFilter implements Filter{
    public String applyFilter(String salah){
        return "Salah " + salah;
    }
}
