Cap2025/src/edu/najah/cap/advance/examples/exc3/bad/ISalahFilter.java
package edu.najah.cap.advance.examples.exc3.bad;

public interface ISalahFilter {
    String applySalah(String salah);
}
